# scenario-dreamer

./: .gitignore  TASK_CLDM_CONDITIONING.md  TASK_bezier_lane_graph_decoder.md  eval.py  pyproject.toml  requirements.txt  train.py
cfgs/: config.yaml  config_autoencoder_bezier_train.yaml  config_cldm_test.yaml  config_cldm_train.yaml
cfgs/datamodule/: waymo_cldm.yaml
cfgs/dataset/: waymo_cldm.yaml
cfgs/eval/: waymo_cldm.yaml
cfgs/model/: autoencoder_bezier.yaml  waymo_autoencoder_bezier.yaml  waymo_cldm.yaml
cfgs/train/: base.yaml  waymo_cldm.yaml
datamodules/waymo/: waymo_datamodule_cldm.py
datasets/waymo/: dataset_cldm_waymo.py
models/: scenario_dreamer_autoencoder_bezier.py  scenario_dreamer_cldm.py  scenario_dreamer_ldm.py
nn_modules/: autoencoder_bezier.py  cldm.py  dit.py
scripts/: define_env_variables.sh
utils/: condition_helpers.py  viz.py
